--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node --presets env,stage-2 ./src/server.js"
+    "start": "nodemon --exec babel-node --presets env,stage-2 ./src/server.js",
+    "watch": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -27,12 +28,15 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "ts-node": "^7.0.1"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
     "cors": "^2.8.4",
     "express": "^4.14.0",
-    "mongoose": "^4.7.2"
+    "global": "^4.3.2",
+    "mongoose": "^4.7.2",
+    "typescript": "^3.1.6"
   }
 }
