--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "es6",
     "allowJs": true,
     "moduleResolution": "node",
-    "outDir": "dist"
+    "outDir": "dist",
+    "strict": true /* Enable all strict type-checking options. */
   },
   "include": ["src/**/*"],
   "exclude": ["dist"]
