--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.16.0",
     "@types/mongoose": "^5.3.0",
     "@types/node": "^10.12.2",
+    "@types/nodemailer": "^4.6.5",
     "nodemon": "^1.11.0",
     "ts-node": "^7.0.1"
   },
@@ -36,6 +37,7 @@
     "express": "^4.14.0",
     "global": "^4.3.2",
     "mongoose": "^4.7.2",
+    "nodemailer": "^4.6.8",
     "typescript": "^3.1.6"
   }
 }
